add version to embedding model

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
             },
             "command": "pdflatex",
             "args": [
+                "-shell-escape",
                 "-interaction=nonstopmode",
                 "-file-line-error",
                 "*.tex"
