--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ spacy==3.5.0
 transformers==4.25.1
 spacy-transformers==1.2.1
 numba==0.55.1
-torchtext==0.13.0
+torch<2.1.0,>=2.0.1
+sentence-transformers=>2.0.0,<2.3.0
+torchtext>=0.15.0,<0.16.0
 pytorch-lightning==1.6.4
 spacy-conll==3.2.0
 scikit-learn==1.1.1
